[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pakage"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Regeneratedpossion", email = "131917819+Regeneratedpossion@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Regeneratedpossion/pakage#readme"
Issues = "https://github.com/Regeneratedpossion/pakage/issues"
Source = "https://github.com/Regeneratedpossion/pakage"

[tool.hatch.version]
path = "src/pakage/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pakage tests}"

[tool.coverage.run]
source_pkgs = ["pakage", "tests"]
branch = true
parallel = true
omit = [
  "src/pakage/__about__.py",
]

[tool.coverage.paths]
pakage = ["src/pakage", "*/pakage/src/pakage"]
tests = ["tests", "*/pakage/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
